[package]
name = "npchk"
version = "0.1.0"
authors = ["Alexander Andreev <andreevlex.as@gmail.com>"]
description = "TThe services of the Federal tax service for Rust"
homepage = "https://github.com/andreevlex/npchk-rs"
repository = "https://github.com/andreevlex/npchk-rs"
keywords = ["nalog.ru"]
readme = "README.md"
license = "MIT"

[dependencies]
xml-rs = "0.6"
log = "0.3"
reqwest = "0.7.3"
hyper = "0.11.2"
xmltree = "0.6.1"
chrono = "0.4.0"

[[example]]
name = "check-fns"
